cleaned up repository, implemented various small optimizations (#25)
* renamed php-fpm config-directory to php to match service name

* cleaned up docker-compose file

* cleaned up readme file

* adjusted order of services in docker-compose files

* removed unnecessare folders from repository

* renamed log directory of php service to match service name

* increased php memory limit

* changed default database name to match sulu best practices, changed default db password

* added network alias for nginx container

* fixed path of php-container logs in logstash config

* adjusted parameters for elk stack in docker-compose file to be consistent with other services

--- a/.env.dist
+++ b/.env.dist
@@ -10,20 +10,20 @@ COMPOSER_PATH=~/.composer
 
 # MySQL
 MYSQL_ROOT_PASSWORD=root
-MYSQL_DATABASE=mydb
+MYSQL_DATABASE=sulu
 MYSQL_USER=user
-MYSQL_PASSWORD=userpass
+MYSQL_PASSWORD=password
 
 # PHP settings
 PHP_TIMEZONE=Europe/Vienna
-PHP_MEMORY_LIMIT=512M
+PHP_MEMORY_LIMIT=2048M
 
 # Open Ports
 PORT_MYSQL=13306
 PORT_NGINX=10080
 PORT_KIBANA=15601
 
-# Blackfire:
+# Blackfire
 BLACKFIRE_SERVER_ID=
 BLACKFIRE_SERVER_TOKEN=
 BLACKFIRE_CLIENT_ID=
