--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,11 @@
 # Project's path (absolute or relative)
 PROJECT_PATH=./project/
-PROJECT_DOMAIN=app.lo
+PROJECT_DOMAIN=sulu.localhost
+
+# User id
+# Linux users: Set this to user id from the host system .
+# Get the user id with: "id -u"
+USER_ID=
 
 # Security
 SSH_KEY_PATH=~/.ssh
