--- a/.env.dist
+++ b/.env.dist
@@ -2,8 +2,7 @@
 PROJECT_PATH=./project/
 PROJECT_DOMAIN=sulu.localhost
 
-# User id
-# Linux users: Set this to user id from the host system .
+# Linux users: Set this to user id from the host system to avoid permission problems.
 # Get the user id with: "id -u"
 USER_ID=
 
