Linux permission problems (#26)
* Fix permission problems on Linux

* Fix bug

* Finish implementation

* Add workspace dir

* Remove not needed

* Add empty line

* Fix comment

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,10 @@
 # Project's path (absolute or relative)
 PROJECT_PATH=./project/
-PROJECT_DOMAIN=app.lo
+PROJECT_DOMAIN=sulu.localhost
+
+# Linux users: Set this to user id from the host system to avoid permission problems.
+# Get the user id with: "id -u"
+USER_ID=
 
 # Security
 SSH_KEY_PATH=~/.ssh
