save bash-history of php-container immediately after each commande

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - ${SSH_KEY_PATH}/known_hosts:/var/www/.ssh/known_hosts
     environment:
       HISTFILE: /var/www/workspace/.bash_history
+      PROMPT_COMMAND: history -a
     env_file: .env
 
   mysql:
