Remove memory limit form php

--- a/.env.dist
+++ b/.env.dist
@@ -20,7 +20,7 @@ MYSQL_PASSWORD=password
 
 # PHP settings
 PHP_TIMEZONE=Europe/Vienna
-PHP_MEMORY_LIMIT=2048M
+PHP_MEMORY_LIMIT=-1
 
 # Open Ports
 PORT_MYSQL=13306
