--- a/config/nginx/project.conf
+++ b/config/nginx/project.conf
@@ -1,47 +1,32 @@
 server {
     server_name __PROJECT_DOMAIN__;
-    root /var/www/project/web;
+    root /var/www/project/public;
 
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
 
-    # strip app.php/ prefix if it is present
-    rewrite ^/app\.php/?(.*)$ /$1 permanent;
-
-    location /admin {
-        index admin.php;
-        try_files $uri @rewriteadmin;
-    }
-
-    location @rewriteadmin {
-        rewrite ^(.*)$ /admin.php/$1 last;
-    }
-
     location / {
-      index website.php;
-      try_files $uri @rewritewebsite;
+        # try to serve file directly, fallback to index.php
+        try_files $uri /index.php$is_args$args;
     }
 
-    # expire
+     # expire
     location ~* \.(?:ico|css|js|gif|jpe?g|png|svg|woff|woff2|eot|ttf)$ {
-        try_files $uri /website.php/$1?$query_string;
+        # try to serve file directly, fallback to index.php
+        try_files $uri /index.php$is_args$args;
         access_log off;
         expires 30d;
         add_header Pragma public;
         add_header Cache-Control "public";
     }
 
-    location @rewritewebsite {
-        rewrite ^(.*)$ /website.php/$1 last;
-    }
-
     # pass the PHP scripts to FastCGI server from upstream phpfcgi
-    location ~ ^/(website|admin|app|app_dev|config)\.php(/|$) {
+    location ~ ^/(index|config)\.php(/|$) {
         fastcgi_pass php-upstream;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param SYMFONY_ENV dev;
-        fastcgi_param HTTPS off;
+        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        internal;
     }
 }
