--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -21,7 +21,7 @@ RUN apt-get install -y libicu-dev \
     && docker-php-ext-configure intl \
     && docker-php-ext-install intl
 
-RUN pecl install \ 
+RUN pecl install \
     xdebug \
     imagick
 
@@ -34,7 +34,7 @@ RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
     && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/$version \
     && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp \
     && mv /tmp/blackfire-*.so $(php -r "echo ini_get('extension_dir');")/blackfire.so \
-    && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > $PHP_INI_DIR/conf.d/blackfire.ini    
+    && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > $PHP_INI_DIR/conf.d/blackfire.ini
 
 # Set timezone
 RUN ln -snf /usr/share/zoneinfo/${PHP_TIMEZONE} /etc/localtime && echo ${PHP_TIMEZONE} > /etc/timezone
@@ -53,6 +53,16 @@ COPY conf.d/* /usr/local/etc/php/conf.d/
 RUN if [ ! -z ${USER_ID} ]; then usermod -u ${USER_ID} www-data; fi
 RUN if [ ! -z ${USER_ID} ]; then groupmod -g ${USER_ID} www-data; fi
 
+# Set permissions for the /var/www directory
+RUN chown -R www-data:www-data /var/www
+
 # set default user and working directory
 USER www-data
 WORKDIR /var/www/project
+
+# set path to the vendor/bin directory
+ENV PATH "$PATH:/var/www/.composer/vendor/bin"
+
+# install global dependency php-cs-fixer
+RUN composer global require friendsofphp/php-cs-fixer
+
