--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,60 +1,44 @@
-FROM php:7.3-fpm
+FROM php:7.4-apache
 
-ARG PHP_TIMEZONE
-ARG PHP_MEMORY_LIMIT
-ARG USER_ID
-
+# Install packages
 RUN apt-get update && apt-get install -y \
     openssl \
     git \
     unzip \
+    libicu-dev \
     libzip-dev \
     libmagickwand-dev \
     inkscape
 
 # Install PHP extensions
+RUN docker-php-ext-configure \
+    intl
+
 RUN docker-php-ext-install -j$(nproc) \
-        pdo \
-        pdo_mysql \
-        opcache \
-        zip
+    intl \
+    pdo \
+    pdo_mysql \
+    opcache \
+    zip
 
-RUN apt-get install -y libicu-dev \
-    && docker-php-ext-configure intl \
-    && docker-php-ext-install intl
-
-RUN pecl install \ 
-    xdebug \
+RUN pecl install \
     imagick
 
 RUN docker-php-ext-enable \
-    xdebug \
     imagick
 
-# Install Blackfire
-RUN version=$(php -r "echo PHP_MAJOR_VERSION.PHP_MINOR_VERSION;") \
-    && curl -A "Docker" -o /tmp/blackfire-probe.tar.gz -D - -L -s https://blackfire.io/api/v1/releases/probe/php/linux/amd64/$version \
-    && tar zxpf /tmp/blackfire-probe.tar.gz -C /tmp \
-    && mv /tmp/blackfire-*.so $(php -r "echo ini_get('extension_dir');")/blackfire.so \
-    && printf "extension=blackfire.so\nblackfire.agent_socket=tcp://blackfire:8707\n" > $PHP_INI_DIR/conf.d/blackfire.ini    
+# Install composer and set COMPOSER_HOME to writable directory
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+ENV COMPOSER_HOME /tmp/.composer
 
-# Set timezone
-RUN ln -snf /usr/share/zoneinfo/${PHP_TIMEZONE} /etc/localtime && echo ${PHP_TIMEZONE} > /etc/timezone
+# Enable development PHP configuration and copy project configuration
+RUN mv "$PHP_INI_DIR/php.ini-development" "$PHP_INI_DIR/php.ini"
+COPY php.ini "$PHP_INI_DIR/conf.d/custom.ini"
 
-# Install composer
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-RUN php composer-setup.php
-RUN php -r "unlink('composer-setup.php');"
-RUN mv composer.phar /usr/local/bin/composer
-COPY composer/config.json /var/www/.composer/config.json
+# Enable apache modules and copy project configuration
+RUN /usr/sbin/a2enmod rewrite && /usr/sbin/a2enmod headers && /usr/sbin/a2enmod expires
+COPY apache.conf "$APACHE_CONFDIR/sites-available/000-default.conf"
 
-# Copy xdebug and php config.
-COPY conf.d/* /usr/local/etc/php/conf.d/
-
-# Map user id from host user when it's provided
-RUN if [ ! -z ${USER_ID} ]; then usermod -u ${USER_ID} www-data; fi
-RUN if [ ! -z ${USER_ID} ]; then groupmod -g ${USER_ID} www-data; fi
-
-# set default user and working directory
+# Set default user and working directory
 USER www-data
-WORKDIR /var/www/project
+WORKDIR /var/www/html
