Adjust php.ini and update elasticsearch version

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -6,3 +6,17 @@ memory_limit = 2G
 
 ; Inject environment variables into $_ENV superglobal
 variables_order = "EGPCS"
+
+; Increase maximum upload size for upoading pictures and videus
+upload_max_filesize = 128M
+post_max_size = 128M
+
+; Enable realpath cache to improve performance
+; https://symfony.com/doc/current/performance.html#configure-the-php-realpath-cache
+realpath_cache_size=4096K
+realpath_cache_ttl=600
+
+; Adjust opcache configuration to suite symfony application
+; https://symfony.com/doc/current/performance.html#configure-opcache-for-maximum-performance
+opcache.memory_consumption=256
+opcache.max_accelerated_files=20000
